# swe600-python

./: .gitignore  .testr.conf  .travis.yml  Procfile  README.md  README.rst  app.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
db/: models.py
swe600_python/: app.py
swe600_python.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  top_level.txt
swe600_python/db/: models.py
swe600_python/templates/: base.html  index.html  result.html
swe600_python/tests/unit/: test_app.py
templates/: base.html  index.html
