[metadata]
name = swe600-python
summary = mid term project
description-file =
    README.md
author = Xinyu Zhao
author-email = xyzjerry@gmail.com
classifier =
    Environment :: Python
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    swe600_python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
